# rend-vk

./: Cargo.toml  README.md  log4rs.yaml  pipeline.json  rend-vk.code-workspace  triangle_pipeline.json
shader/: copy.frag  csm.json  dir_light.frag  dir_light.vert  dir_shadow.frag  dir_shadowmap.vert  empty.frag  fullscreen.vert  gbuffer.frag  gbuffer.vert  nuklear.frag  nuklear.vert  point_light.frag  point_light.vert  sao.json  sao_basefs.vert  sao_blur.frag  sao_blur.vert  sao_linearz.frag  sao_minifyz.frag  sao_minifyz.vert  sao_occlusion.frag  sao_packpos.frag  shared.glsl.frag  shared_opengl.glsl.frag  shared_pbr.glsl.frag  shared_vulkan.glsl.frag  shared_wrapper.glsl.frag  simple.frag  simple.vert  skybox.frag  skybox.vert  spot_light.frag  spot_light.vert
src/: buffer.rs  context.rs  debug.rs  format.rs  java_api.rs  lib.rs  main.rs  pipeline.rs  render_task.rs  renderer.rs  shader.rs  shader_resource.rs  swapchain.rs  texture.rs  updater.rs  window.rs
src/pipeline/: attachment.rs  barrier_gen.rs  blit_stage.rs  descriptor.rs  file.rs  load.rs  mod.rs  render_stage.rs  sampler.rs  stage.rs  state.rs
