[package]
name = "rend-vk"
version = "0.1.0"
edition = "2021"

[lib]
name = "rend_vk"
crate-type = ["rlib", "cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
rand = { version = "0.8.5" }
ash = { version = "0.37.3", features = ["linked", "debug"] }
ash-window = "0.12.0"
glam = { version = "0.20.2", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
raw-window-handle = "0.5"
winit = "0.28.0"
x11-dl = "2.21.0"
bitvec = "1.0.1"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
log = "0.4.17"
log4rs = "1.2.0"
lazy_static = "1.4.0"
