[package]
name = "rend-vk"
version = "0.1.0"
edition = "2021"

[lib]
name = "rend_vk"
crate-type = ["rlib", "cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.17"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
log4rs = "1.4.0"
glam = { version = "0.20.2", features = ["serde"] }
rand = { version = "0.9.2" }
bitvec = "1.0.1"
indexmap = { version = "2.12.1", features = ["std", "serde"] }
ash = { version = "0.38.0", features = ["linked", "debug"] }
ash-window = "0.13.0"
raw-window-handle = "0.6.2"
winit = "0.29.0"
x11-dl = "2.21.0"
